@@ -9,3 +9,9 @@ radar-equipment=Radar Equipment
 
 [equipment-description]
 radar-equipment=Adds radar coverage. Mutliple radars have no effect. Consumes 30kW.
+
+[technology-name]
+radar-equipment=Radar Equipment
+
+[technology-description]
+radar-equipment=Allows the construction of radar equipment which provides radar coverage when placed in equipment grids.
